test/e2e/features/deployer/testdata/gatewayparameters-custom.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: gw-params-custom
spec:
  kube:
    deployment:
      replicas: 2
    podTemplate:
      extraLabels:
        pod-label-key: pod-label-val
      extraAnnotations:
        pod-anno-key: pod-anno-val
    envoyContainer:
      bootstrap:
        logLevel: debug
        componentLogLevels:
          upstream: debug
          connection: trace
      securityContext:
        runAsNonRoot: false
        allowPrivilegeEscalation: true
