test/e2e/features/deployer/testdata/self-managed-gateway.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: gw-params
spec:
  selfManaged: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw
  annotations:
    # should match selfManagedGatewayAnnotation in test/e2e/tests/base/base_suite.go
    e2e.kgateway.dev/self-managed: "true"
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gw-params
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
